[package]
name = "db_worker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
redis-client = { path = "../../packages/redis-client" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
dotenvy = "0.15"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
fred = "9"
