[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
uuid = { version = "1", features = ["v4"] }
redis-client = { path = "../../packages/redis-client" }
log = "0.4"
fred = "9"
dotenvy = "0.15"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tokio-test = "0.4"
rand = "0.8"

[[bench]]
name = "orderbook_benchmark"
harness = false