[package]
name = "prediction-market"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
serde = "1.0.228"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
validator = { version = "0.20", features = ["derive"] }
bcrypt = "0.17.1"
env_logger = "0.11"
log = "0.4"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
dotenvy = "0.15"
chrono = { version = "0.4.42", features = ["serde"] }
redis-client = { path = "../../packages/redis-client" }
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
fred = "9"
engine = { path = "../engine" }
futures-util = "0.3"
